welcome.lessons.welcome.array.search.SecondMaxValue.scala.error
max2Value:2: error: not found: type IntMMAX_VALUE
  var max:IntMMAX_VALUE
          ^max2Value:2: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
  var max:IntMMAX_VALUE
      ^max2Value:2: error: local variables must be initialized
  var max:IntMMAX_VALUE
      ^max2Value:3: error: not found: type IntMIN_VALUE
  var min:IntMIN_VALUE
          ^max2Value:3: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
  var min:IntMIN_VALUE
      ^max2Value:3: error: local variables must be initialized
  var min:IntMIN_VALUE
      ^